--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,8 @@
 <!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
-  <h1>{{title}}</h1>
+<div class="container">
+  <div style="text-align:center">
+    <h1>{{title}}</h1>
+  </div>
+  <ability-score-list [abilities]="character.abilities"></ability-score-list>
+  <button (click)="onGenerateClick()">Generate</button>
 </div>
-<h2>Abilities</h2>
-<ul>
-    <li><ability-score ability="Strength" [score]="character.strength"></ability-score></li>
-    <li><ability-score ability="Dexterity" [score]="character.dexterity"></ability-score></li>
-    <li><ability-score ability="Constitution" [score]="character.constitution"></ability-score></li>
-    <li><ability-score ability="Wisdom" [score]="character.wisdom"></ability-score></li>
-    <li><ability-score ability="Intelligence" [score]="character.intelligence"></ability-score></li>
-    <li><ability-score ability="Charisma" [score]="character.charisma"></ability-score></li>
-</ul>
-
-<button (click)="onGenerateClick()">Generate</button>
