Make the ability scores look pretty.

--- a/src/components/ability-score-list/ability-score-list.component.html
+++ b/src/components/ability-score-list/ability-score-list.component.html
@@ -1,5 +1,5 @@
 <h2>Abilities</h2>
-<ul>
+<ul class="ability-list">
     <li>
         <ability-score ability="Strength" [score]="abilities.strength"></ability-score>
     </li>
