--- a/src/components/ability-score/ability-score.component.html
+++ b/src/components/ability-score/ability-score.component.html
@@ -1,3 +1,6 @@
-<div>
-{{ability}}: {{score}} ({{modifier}})
+<div class="ability">
+    <span class="ability-name">{{ability}}</span>
+    <div class="ability-score">
+        <span class="ability-value">{{score}}</span> <span class="ability-modifier">({{modifier}})</span>
+    </div>
 </div>
