--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
   <div style="text-align:center">
     <h1>{{title}}</h1>
   </div>
+  <div class="footer">
+    <button class="btn btn-primary" (click)="onGenerateClick()">Generate</button>
+  </div>
   <ability-score-list [abilities]="character.abilities"></ability-score-list>
-  <button (click)="onGenerateClick()">Generate</button>
 </div>
