--- a/src/components/ability-score-list/ability-score-list.component.scss
+++ b/src/components/ability-score-list/ability-score-list.component.scss
@@ -1,16 +1,28 @@
 @import "../../styles/variables.scss";
-
-.ability-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    border-bottom: 2px solid $accent-color;
-    border-top: 2px solid $accent-color;
-
-    li {
-        float: left;
-        width: calc(100% / 6);
+.ability-score-list {
+    .ability-list {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        border-bottom: 2px solid $accent-color;
+        border-top: 2px solid $accent-color;
+        li {
+            float: left;
+            width: calc(100% / 6);
+        }
+    }
+    .ability-score-info {
+        font-variant: small-caps;
+        font-weight: bold;
+        text-align: right;
+        padding: 6px;
+        .ability-sum, .ability-percentile {
+            display: inline-block;
+        }
+        .ability-sum {
+            border-right: 1px solid $accent-color;
+            padding-right: 6px;
+        }
     }
 }
-
