Add references, races, size and alignment.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,14 @@
   </div>
 </div>
 <div class="container">
+  <div class="npc-header">
+    <h1 class="npc-name">John Smith</h1>
+    <div class="text-muted npc-subline">
+      <span class="size">{{character.race.size}}</span>
+      <span class="race">{{character.race.name}}</span><source-reference [reference]="character.race.reference"></source-reference>
+      <span class="sub-race">{{character.subrace.name}}</span>
+      <span class="npc-alignment">{{character.alignment}}</span>
+    </div>
+  </div>
   <ability-score-list [abilities]="character.abilities"></ability-score-list>
 </div>
