--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-
 
 @import "variables.scss";
 @import "bootstrap.scss";
-@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
+$fa-font-path: "~font-awesome/fonts";
+@import "~font-awesome/scss/font-awesome";
+@import "~bootstrap/scss/bootstrap";
