Convert alignments to KVPs.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
       <span class="size">{{character.race.size}}</span>
       <span class="race">{{character.race.name}}</span><source-reference [reference]="character.race.reference"></source-reference>
       <span class="sub-race">{{character.subrace.name}}</span>
-      <span class="npc-alignment">{{character.alignment}}</span>
+      <span class="npc-alignment">{{character.alignmentDescription}}</span>
     </div>
   </div>
   <ability-score-list [abilities]="character.abilities"></ability-score-list>
