Make fonts look like original character sheet.

--- a/src/components/source-reference/source-reference.component.html
+++ b/src/components/source-reference/source-reference.component.html
@@ -4,7 +4,7 @@
 </sup>
 <ng-template #refContent>
     <div class="source-tip">
-        <a class="source-url" [href]="reference.url">
+        <a class="source-url" [href]="reference.url" target="_blank">
             {{sourceName}}, Page {{reference.page}}
         </a>
     </div>
