--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,3 +3,6 @@ $brand-primary: #bc0f0f;
 $btn-border-radius: 2px;
 $btn-border-radius-sm: 2px;
 $btn-border-radius-lg: 2px;
+
+$font-family-sans-serif: 'Scala Sans', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$font-family-secondary: "Segoe UI";
