--- a/src/components/ability-score/ability-score.component.scss
+++ b/src/components/ability-score/ability-score.component.scss
@@ -4,9 +4,9 @@
     .ability-name {
         display: block;
         font-size: 14px;
-        font-variant: small-caps;
         font-weight: bold;
         text-align: center;
+        text-transform: uppercase;
     }
     
     .ability-score {
