--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,8 @@
-
+@import "fonts.scss";
 @import "variables.scss";
-@import "bootstrap.scss";
 
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 @import "~bootstrap/scss/bootstrap";
+
+@import "bootstrap.scss";
