--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -7,3 +7,10 @@
     font-size: 0.8rem;
     font-weight: bold;
 }
+
+.tooltip-inner {
+    clear: both;
+    overflow: hidden;
+    white-space: nowrap;
+    font-family: $font-family-secondary;
+}
