Make ability modifiers green/red.

--- a/src/components/ability-score/ability-score.component.scss
+++ b/src/components/ability-score/ability-score.component.scss
@@ -12,5 +12,10 @@
     .ability-score {
         text-align: center;
         font-size: 20px;
+        font-weight: bolder;
+        .ability-modifier {
+            &:before { content: "("; }
+            &:after { content: ")"; }
+        }
     }
 }
