--- a/src/components/ability-score/ability-score.component.html
+++ b/src/components/ability-score/ability-score.component.html
@@ -1,6 +1,6 @@
 <div class="ability">
     <span class="ability-name">{{ability}}</span>
     <div class="ability-score">
-        <span class="ability-value">{{score}}</span> <span class="ability-modifier">({{modifier}})</span>
+        <span class="ability-value">{{score}}</span> <span class="ability-modifier" [ngClass]="(modifier > 0) ? 'text-success' : modifier === 0 ? '' : 'text-danger'">{{modifierText}}</span>
     </div>
 </div>
