Added speed display.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,4 +23,5 @@
     </div>
   </div>
   <ability-score-list [abilities]="character.abilities"></ability-score-list>
+  <speed-display [speed]="character.race.speed"></speed-display>
 </div>
