--- a/src/components/source-reference/source-reference.component.scss
+++ b/src/components/source-reference/source-reference.component.scss
@@ -2,10 +2,7 @@
 
 .source-reference {
     padding-left: 2px;
-}
-
-.source-tip {
-    a {
-        color: white;
+    a:hover {
+        text-decoration: none;
     }
 }
