--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -10,7 +10,8 @@
 
 .tooltip-inner {
     clear: both;
-    overflow: hidden;
-    white-space: nowrap;
     font-family: $font-family-secondary;
+    max-width: 300px;
+    overflow: hidden;
+    white-space: nowrap;    
 }
