Fix some responsive issues with grid.

--- a/src/components/source-reference/source-reference.component.scss
+++ b/src/components/source-reference/source-reference.component.scss
@@ -2,7 +2,7 @@
 
 .source-reference {
     padding-left: 2px;
-    a:hover {
+    a:hover, a:active, a:focus {
         text-decoration: none;
     }
 }
