Add racial features and clean up styling.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,11 +17,13 @@
     <h1 class="npc-name">John Smith</h1>
     <div class="text-muted npc-subline">
       <span class="size">{{character.race.size}}</span>
-      <span class="race">{{character.race.name}}</span><source-reference [reference]="character.race.reference"></source-reference>
+      <span class="race">{{character.race.name}}</span>
+      <source-reference [reference]="character.race.reference"></source-reference>
       <span class="sub-race" *ngIf="character.subrace">{{character.subrace.name}}<source-reference [reference]="character.subrace.reference"></source-reference></span>,
       <span class="npc-alignment">{{character.alignmentDescription}}</span>
     </div>
   </div>
   <ability-score-list [abilities]="character.abilities"></ability-score-list>
   <speed-display [speed]="character.race.speed"></speed-display>
+  <feature-display-list [features]="character.race.features"></feature-display-list>
 </div>
