Fix speed, clean up features.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,6 @@
     </div>
   </div>
   <ability-score-list [abilities]="character.abilities"></ability-score-list>
-  <speed-display [speed]="character.race.speed"></speed-display>
+  <speed-display [speed]="character.speed"></speed-display>
   <feature-display-list [features]="character.race.features"></feature-display-list>
 </div>
