Display subracial features.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,5 +25,5 @@
   </div>
   <ability-score-list [abilities]="character.abilities"></ability-score-list>
   <speed-display [speed]="character.speed"></speed-display>
-  <feature-display-list [features]="character.race.features"></feature-display-list>
+  <feature-display-list [features]="character.racialFeatures"></feature-display-list>
 </div>
