--- a/src/components/ability-score-list/ability-score-list.component.html
+++ b/src/components/ability-score-list/ability-score-list.component.html
@@ -7,7 +7,7 @@
         <ability-score ability="Intelligence" [score]="abilities.intelligence"></ability-score>
         <ability-score ability="Charisma" [score]="abilities.charisma"></ability-score>
     </div>
-    <div class="ability-info">
+    <div class="ability-info attribute-title">
         <span class="ability-sum">Total: {{abilitySum}}</span>
         <span class="ability-percentile">{{abilityPercentile}}% Percentile</span>
     </div>
