--- a/src/components/speed-display/speed-display.component.html
+++ b/src/components/speed-display/speed-display.component.html
@@ -1,19 +1,19 @@
 <div class="speed-list character-block-minor">
     <div class="row">
         <div class="col-md-3 col-6">
-            <div class="speed-type">Walk</div>
+            <div class="speed-type attribute-title">Walk</div>
             <div class="speed-value">{{speed.walk}}</div>
         </div>
         <div class="col-md-3 col-6">
-            <div class="speed-type">Swim</div>
+            <div class="speed-type attribute-title">Swim</div>
             <div class="speed-value">{{speed.swim}}</div>
         </div>
         <div class="col-md-3 col-6">
-            <div class="speed-type">Fly</div>
+            <div class="speed-type attribute-title">Fly</div>
             <div class="speed-value">{{speed.fly}}</div>
         </div>
         <div class="col-md-3 col-6">
-            <div class="speed-type">Climb</div>
+            <div class="speed-type attribute-title">Climb</div>
             <div class="speed-value">{{speed.climb}}</div>
         </div>
     </div>
