--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -6,3 +6,19 @@
 .character-block-minor {
     border-bottom: 1px solid $brand-primary;
 }
+
+.character-sub-block {
+    padding: 12px;
+}
+
+.sub-block-title {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.attribute-title {
+    display: block;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
