Add height and weight support.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,10 @@
       <span class="sub-race" *ngIf="character.subrace">{{character.subrace.name}}<source-reference [reference]="character.subrace.reference"></source-reference></span>,
       <span class="npc-alignment">{{character.alignmentDescription}}</span>
     </div>
+    <div class="text-muted npc-subline">
+      <span class="height">{{character.heightString || 0}}</span>,
+      <span class="weight">{{(character.weight || 0) + " lbs."}}</span>
+    </div>
   </div>
   <ability-score-list [abilities]="character.abilities"></ability-score-list>
   <speed-display [speed]="character.speed"></speed-display>
