--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
       <span class="weight">{{(character.age || 0) + " years old"}}</span>
     </div>
   </div>
-  <ability-score-list [abilities]="character.abilities"></ability-score-list>
+  <ability-score-list [character]="character"></ability-score-list>
   <speed-display [speed]="character.speed"></speed-display>
   <div class="character-block-minor">
     <div class="row">
@@ -40,10 +40,7 @@
         <senses-display [senses]="character.senses"></senses-display>
       </div>
       <div class="col-md-4">
-        <div class="character-sub-block">
-          <h3 class="sub-block-title">Skills</h3>
-          History +3, Perception +10
-        </div>
+        <skills-display [character]="character"></skills-display>
       </div>
     </div>
   </div>
