--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,25 @@
     <a class="navbar-brand" href="#">{{title}}</a>
   </div>
 </nav>
-
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <p class="lead">This is a simple tool for generating NPC character statistics based on the 5th edition Dungeons &amp; Dragons ruleset.
-      <br/>To begin, click the button below.</p>
-    <p><button type="button" class="btn btn-primary btn-lg" (click)="onGenerateClick()">Generate NPC</button>
-      <p>
+    <p class="lead">A simple tool for generating NPC character statistics based on the 5th edition Dungeons &amp; Dragons ruleset.</p>
+    <form class="form-inline">
+      <label class="sr-only" for="race">Race</label>
+      <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="race" [(ngModel)]="config.race" (input)="config.subrace = null">
+        <option [value]="null" selected>Any Race</option>
+        <option *ngFor="let race of races" [ngValue]="race">{{race.name}}</option>
+      </select>
+      <select class="custom-select mb-2 mr-sm-2 mb-sm-0" name="race" [(ngModel)]="config.subrace" *ngIf="config.race && config.race.subraces">
+        <option [value]="null" selected>Any Subrace</option>
+        <option *ngFor="let subrace of config.race.subraces" [ngValue]="subrace">{{subrace.name}}</option>
+      </select>
+    </form>
+    <div class="row">
+      <div class="col-12 text-right">
+        <button type="button" class="btn btn-primary btn-lg" (click)="onGenerateClick()">Generate NPC</button>
+      </div>
+    </div>
   </div>
 </div>
 <div class="container">
@@ -25,7 +37,7 @@
     <div class="text-muted npc-subline">
       <span class="gender">{{character.genderDescription}}</span>,
       <span class="height">{{character.heightString || 0}}</span>,
-      <span class="weight">{{(character.weight || 0) + " lbs."}}</span>, 
+      <span class="weight">{{(character.weight || 0) + " lbs."}}</span>,
       <span class="weight">{{(character.age || 0) + " years old"}}</span>
     </div>
   </div>
