--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -7,18 +7,33 @@
     border-bottom: 1px solid $brand-primary;
 }
 
+.attribute-block {
+    padding: 12px;
+    text-align: center;
+
+    .attribute-title {
+        display: block;
+        font-size: 14px;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    .primary {
+        font-size: 24px;
+        font-family: $font-family-secondary;
+    }
+
+    .secondary {
+        font-size: 12px;
+        font-family: $font-family-secondary;
+        vertical-align: top;
+    }
+}
+
 .character-sub-block {
     padding: 12px;
-}
-
-.sub-block-title {
-    font-size: 16px;
-    font-weight: bold;
-}
-
-.attribute-title {
-    display: block;
-    font-size: 14px;
-    font-weight: bold;
-    text-transform: uppercase;
+    .sub-block-title {
+        font-size: 16px;
+        font-weight: bold;
+    }
 }
