Add correct proficiency bonuses.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
       <div class="col-md-3 col-sm-6">
         <div class="attribute-block">
           <div class="attribute-title">Level</div>
-          <span class="primary">{{character.level}}</span>
+          <span class="primary">{{character.level.number}}</span>
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
