--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -37,3 +37,17 @@
         font-weight: bold;
     }
 }
+
+.form-group {
+    label {
+        display: block;
+        font-size: 14px;
+        font-weight: bold;
+        text-transform: uppercase;
+    }
+
+    .form-control, .custom-select {
+        font-size: 14px;
+        font-family: $font-family-secondary;
+    }
+}
