--- a/src/components/generator-config/generator-config.component.html
+++ b/src/components/generator-config/generator-config.component.html
@@ -1,5 +1,4 @@
 <div class="row">
-
   <div class="col-md-3 form-group">
     <label for="race">Race</label>
     <select class="form-control" name="race" [(ngModel)]="config.race" (input)="config.subrace = null">
@@ -14,7 +13,6 @@
         </ng-template>
     </select>
   </div>
-
   <div class="col-md-3 form-group">
     <label for="primaryAbility">Abilities</label>
     <select class="form-control" name="primaryAbility" [(ngModel)]="config.primaryAbility">
@@ -26,7 +24,6 @@
         <option *ngFor="let ability of abilities" [ngValue]="ability">{{ability.name}}</option>
     </select>
   </div>
-
   <div class="col-md-3 form-group">
     <label for="minLevel">Level</label>
     <div>
@@ -51,8 +48,7 @@
         <option value="18">18</option>
         <option value="19">19</option>
         <option value="20">20</option>
-      </select>
-      &ndash;&ndash;
+      </select> &ndash;&ndash;
       <select class="custom-select ml-2" name="maxLevel" [(ngModel)]="config.maxLevel">
         <option value="1">1</option>
         <option value="2">2</option>
@@ -76,5 +72,24 @@
         <option value="20">20</option>
       </select>
     </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-3 form-group">
+    <label for="race">Class</label>
+    <select class="form-control" name="class" [(ngModel)]="config.class">
+        <option [value]="null" selected>Any Class</option>
+        <option *ngFor="let class of classes" [ngValue]="class">{{class.name}}</option>
+    </select>
+  </div>
+  <div class="col-md-3 form-group">
+    <label for="race">Background</label>
+    <select class="form-control" name="background" [(ngModel)]="config.background">
+        <option [value]="null" selected>Any Background</option>
+        <option *ngFor="let background of backgrounds" [ngValue]="background">{{background.name}}</option>
+    </select>
+  </div>
+  <div class="col-md-3 form-group">
+
   </div>
 </div>
