--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -7,6 +7,11 @@
     border-bottom: 1px solid $brand-primary;
 }
 
+.character-block-first {
+    border-bottom: 1px solid $brand-primary;
+    border-top: 1px solid $brand-primary;
+}
+
 .attribute-block {
     padding: 12px;
     text-align: center;
@@ -49,5 +54,17 @@
     .form-control, .custom-select {
         font-size: 14px;
         font-family: $font-family-secondary;
+    }
+}
+
+.feature {
+    padding: 4px 0 4px 0;
+    
+    .feature-name {
+        display: inline;
+        font-size: 16px;
+        font-style: italic;
+        font-weight: bold;
+        padding-right: 4px;
     }
 }
